# taichi_benchmark

./: .gitmodules  README.md  foo.json  requirements.txt  run.py  setup.py  test.py
core/: common.py  cuda.py  machine.py  runner.py  taichi.py  upload.py
diff-smoke/: README.md  plot_benchmark.py
diff-taichi/: README.md  plot_benchmark.py
fill/: README.md  plot_benchmark.py
fill/cuda/: benchmark.py  fill.cu
fill/taichi/: fill.py
mac/: README.md
mac/src/: benchmark.py  numba_kernels.py  taichi_kernels.py  utils.py
mpm/: README.md  benchmark_cuda.py  benchmark_taichi.py  misc.py  plot_benchmark.py
mpm/src/cuda/: CMakeLists.txt  benchmark.py
mpm/src/cuda/src/: main.cu  mpm.cu  mpm2d.cu  mpm3d.cu  utils.h
mpm/src/cuda/src/Eigen/src/Core/products/: GeneralBlockPanelKernel.h
mpm/src/cuda/src/Eigen/src/Core/util/: Constants.h  IndexedViewHelper.h  SymbolicIndex.h
mpm/src/cuda/src/Eigen/src/Eigenvalues/: RealSchur.h  SelfAdjointEigenSolver.h
mpm/src/cuda/src/Eigen/src/SVD/: BDCSVD.h
mpm3d/cuda/src/: CMakeLists.txt  Makefile  README.md  main.cu  mpm3d.cu  mpm3d.cuh  utils.h
mpm3d/cuda/src/Eigen/src/Cholesky/: LLT.h
mpm3d/cuda/src/Eigen/src/Core/: ConditionEstimator.h
mpm3d/cuda/src/Eigen/src/Core/arch/Default/: GenericPacketMathFunctions.h
mpm3d/cuda/src/Eigen/src/Core/functors/: NullaryFunctors.h
mpm3d/cuda/src/Eigen/src/Core/products/: TriangularSolverMatrix.h
mpm3d/cuda/src/Eigen/src/Eigenvalues/: ComplexSchur.h  RealQZ.h
mpm3d/cuda/src/Eigen/src/QR/: ColPivHouseholderQR.h
mpm3d/cuda/src/Eigen/src/SVD/: JacobiSVD.h
mpm3d/cuda/src/py/: mpm3d.py
mpm3d/taichi/: mpm3d.py
n-body/: README.md  benchmark_cuda.py  benchmark_taichi.py  cuda_block.cu  misc.py  plot_benchmark.py  plot_benchmark_comparison.py  taichi_nbody_block.py
p2g/: README.md  plot_benchmark.py
p2g/src/cuda/: CMakeLists.txt  benchmark.py
p2g/src/cuda/src/: .p2g.cu.swp  p2g.cu  utils.h
p2g/src/cuda/src/eigen/Eigen/src/Core/: CoreEvaluators.h  DenseBase.h  PlainObjectBase.h  SolverBase.h  TriangularMatrix.h
p2g/src/cuda/src/eigen/Eigen/src/Core/arch/AltiVec/: MatrixProduct.h  MatrixProductMMA.h  MatrixVectorProduct.h  PacketMath.h
p2g/src/cuda/src/eigen/Eigen/src/Core/util/: BlasUtil.h  Macros.h  Memory.h  Meta.h  XprHelper.h
p2g/src/cuda/src/eigen/Eigen/src/QR/: HouseholderQR.h
p2g/src/cuda/src/eigen/Eigen/src/SparseCore/: SparseMatrixBase.h
p2g/src/cuda/src/eigen/ci/: build.gitlab-ci.yml  test.gitlab-ci.yml
p2g/src/cuda/src/eigen/test/: main.h
p2g/src/cuda/src/eigen/unsupported/Eigen/CXX11/src/Tensor/: Tensor.h  TensorArgMax.h  TensorAssign.h  TensorBase.h  TensorBlock.h  TensorBroadcasting.h  TensorChipping.h  TensorConcatenation.h  TensorContraction.h  TensorContractionGpu.h  TensorContractionSycl.h  TensorContractionThreadPool.h  TensorConversion.h  TensorConvolution.h  TensorConvolutionSycl.h  TensorCustomOp.h  TensorEvalTo.h  TensorEvaluator.h  TensorExecutor.h  TensorExpr.h  TensorFFT.h  TensorFixedSize.h  TensorForcedEval.h  TensorGenerator.h  TensorImagePatch.h  TensorInflation.h  TensorIntDiv.h  TensorLayoutSwap.h  TensorMap.h  TensorMorphing.h  TensorPadding.h  TensorPatch.h  TensorReduction.h  TensorReductionGpu.h  TensorRef.h  TensorReverse.h  TensorScan.h  TensorShuffling.h  TensorStriding.h  TensorTrace.h  (+1 more)
p2g/src/cuda/src/eigen/unsupported/Eigen/src/EulerAngles/: EulerSystem.h
p2g/src/cuda/src/eigen/unsupported/Eigen/src/KroneckerProduct/: KroneckerTensorProduct.h
p2g/src/cuda/src/eigen/unsupported/test/: NNLS.cpp
poisson/: README.md  plot_benchmark.py
prefix_scan/cuda/: scan.cu
prefix_scan/taichi/: scan.py
prefix_scan/vulkan/: scan_naive.py
reduce_sum/: .gitignore  README.md  plot_benchmark.py  plot_benchmark_nb.py
saxpy/: .gitignore  README.md  benchmark_cuda.py  benchmark_taichi.py  plot_benchmark.py  plot_roofline.py  roofline_plot.py
saxpy/cuda/: cublas.cu  thrust.cu
saxpy/taichi/: saxpy.py
scan/: .gitignore  plot_benchmark.py
scripts/: fill-releases.py  prepare_conda_envs_for_taichi_releases.sh  run_taichi_releases_perf_comparison.sh  visualizer.py
smallpt/: README.md  plot_benchmark.py
smallpt/taichi/: 4_0_path_tracing.py
stencil2d/: README.md  benchmark_cuda.py  benchmark_taichi.py  plot_benchmark.py
suites/: __init__.py
suites/AOTBench/: __init__.py
suites/fill/: .gitignore  __init__.py  plot_benchmark.py
suites/mpm/: README.md  __init__.py  plot_benchmark.py
suites/n_body/: .gitignore  README.md  __init__.py  misc.py  plot_benchmark.py
suites/poisson/: README.md
suites/saxpy/: .gitignore  README.md  __init__.py
suites/smallpt/: plot_benchmark.py
suites/smallpt/src/cuda/: CMakeLists.txt
suites/stencil/: .gitignore  README.md  __init__.py
svd3/: README.md  plot_benchmark.py
taichi_benchmark/: __init__.py
utils/: logconfig.py  plot_benchmark_mpm.py
(+172 files in other folders)
